--- a/src/main/resources/templates/user-info.html
+++ b/src/main/resources/templates/user-info.html
@@ -8,7 +8,8 @@
 <h2>User info</h2>
 <br>
 <form th:method="POST" th:action="@{/}" th:object="${user}">
-    <input type="hidden" th:name="id" th:value="${user.getId()}">
+    <input type="hidden" name="_method" value="PATCH">
+    <input type="hidden" th:name="id" th:value="*{id}">
     <label for="firstName">Enter first name: </label>
     <input type="text" th:field="*{firstName}" id="firstName"/>
     <br><br>
