--- a/src/main/resources/templates/users.html
+++ b/src/main/resources/templates/users.html
@@ -13,7 +13,8 @@
             <th>First Name</th>
             <th>Last Name</th>
             <th>Email</th>
-            <th>Operations</th>
+            <th>Update</th>
+            <th>Delete</th>
         </tr>
         <tr th:each="user : ${users}">
             <td th:utext="${user.firstName}">...</td>
@@ -23,8 +24,10 @@
                 <form th:action="@{/edit}">
                     <button type="submit" th:name="index" th:value="${user.getId()}">Update</button>
                 </form>
-                <form th:method="POST" th:action="@{/delete}">
-                    <button type="submit" th:name="index" th:value="${user.getId()}">Delete</button>
+            </td>
+            <td>
+                <form th:method="delete" th:action="@{'/delete?index='+${user.getId()}}">
+                    <button type="submit">Delete</button>
                 </form>
             </td>
         </tr>
